# Programing_4Semester

Advance_C++_Programing/Lectures/: Лекция 0.5.pptx  Лекция 1.pptx
Advance_C++_Programing/Practicum_1/: prac_1.cpp
Advance_C++_Programing/Practicum_2/: pointers.cpp  prac_2.cpp
Advance_C++_Programing/Practicums/Practicum_2/: rlvalue.cpp
Advance_C++_Programing/Practicums/Practicum_3/: prac_3.cpp
Advance_C++_Programing/Practicums/Practicum_4/: prac.cpp
Advance_C++_Programing/Seminar_1/: CMakeLists.txt  rectangle.h  shape.h  Сем_1.cpp
Advance_C++_Programing/Seminar_2/: main.cpp
Advance_C++_Programing/Seminar_3/: main.cpp  test.cpp
Advance_C++_Programing/Seminar_4/: template.cpp
Advance_C++_Programing/Seminar_5/: main.cpp
Advance_C++_Programing/Seminars/Seminar_1/: main.cpp  rectangle.cpp  Сем_1.cmake
Advance_C++_Programing/Seminars/Seminar_4/: other.cpp  (+1 more)
C++_Practicum/SimpleCode_OOP/: CMakeLists.txt
C++_Practicum/Tests/: class_Logger.cpp
CMakeProjectTemplate/: CMakeLists.txt
CMakeProjectTemplate/include/my_lib/: sum.h
CMakeProjectTemplate/source/: main.cpp
CMakeProjectTemplate/source/my_libs/: sum.cpp
Networked_and_distributed_systems/Seminar_1/: udpcli.c  udpserv.c
Networked_and_distributed_systems/Seminar_2/: Pi_cl.c
Networked_and_distributed_systems/Seminar_3/: Pi_serv.c  tcpclient.c  tcpserver.c
Networked_and_distributed_systems/Seminar_4/: server_client.c
Networked_and_distributed_systems/Seminar_5/: Bercly.c
Networked_and_distributed_systems/Seminar_6/: Lamport.c
Networked_and_distributed_systems/Seminar_7/: Vector_time.c
(+43 files in other folders)
